tests/bad/value_enums/no_compare_with_values.oc
/// fail:  Expected enum variant, got: Variable

// Old error
/// fail: Operator `Equals` does not support non-trivial enum `Foo`

enum Foo {
    Case0(x: i32)
    Case1(y: str, x: i32)
    Case2(y: str)
    Case3
}


def main() {
    let x: Foo
    let y: Foo
    if x == y {
        println("x == y")
    } else {
        println("x != y")
    }
}